@@ -38,64 +38,40 @@ exception statement from your version.  */
 
 package gnu.javax.crypto.jce.prng;
 
+import gnu.java.security.Configuration;
 import gnu.java.security.Registry;
-import gnu.javax.crypto.cipher.IBlockCipher;
 import gnu.java.security.prng.LimitReachedException;
+import gnu.javax.crypto.cipher.IBlockCipher;
 import gnu.javax.crypto.prng.UMacGenerator;
 
-import java.io.PrintWriter;
 import java.security.SecureRandomSpi;
 import java.util.HashMap;
 import java.util.Random;
+import java.util.logging.Logger;
 
 /**
- * <p>An <em>Adapter</em> class around {@link UMacGenerator} to allow using this
- * algorithm as a JCE {@link java.security.SecureRandom}.</p>
+ * An <em>Adapter</em> class around {@link UMacGenerator} to allow using this
+ * algorithm as a JCE {@link java.security.SecureRandom}.
  */
-public class UMacRandomSpi extends SecureRandomSpi
+public class UMacRandomSpi
+    extends SecureRandomSpi
 {
-
-  // Debugging methods and variables
-  // -------------------------------------------------------------------------
-
-  private static final String NAME = "UMacRandomSpi";
-
-  private static final boolean DEBUG = false;
-
-  private static final PrintWriter err = new PrintWriter(System.out, true);
-
-  private static void debug(String s)
-  {
-    err.println(">>> " + NAME + ": " + s);
-  }
-
-  // Constants and variables
-  // -------------------------------------------------------------------------
-
-  /** Class-wide prng to generate random material for the underlying prng.*/
+  private static final Logger log = Logger.getLogger(UMacRandomSpi.class.getName());
+  /** Class-wide prng to generate random material for the underlying prng. */
   private static final UMacGenerator prng; // blank final
   static
     {
       prng = new UMacGenerator();
       resetLocalPRNG();
     }
-
   // error messages
   private static final String MSG = "Exception while setting up a "
                                     + Registry.UMAC_PRNG + " SPI: ";
-
   private static final String RETRY = "Retry...";
-
   /** Our underlying prng instance. */
   private UMacGenerator adaptee = new UMacGenerator();
 
-  // Constructor(s)
-  // -------------------------------------------------------------------------
-
   // default 0-arguments constructor
-
-  // Class methods
-  // -------------------------------------------------------------------------
 
   private static void resetLocalPRNG()
   {
@@ -106,22 +82,14 @@ public class UMacRandomSpi extends SecureRandomSpi
     rand.nextBytes(key);
     attributes.put(IBlockCipher.KEY_MATERIAL, key);
     int index = rand.nextInt() & 0xFF;
-    attributes.put(UMacGenerator.INDEX, new Integer(index));
-
+    attributes.put(UMacGenerator.INDEX, Integer.valueOf(index));
     prng.setup(attributes);
   }
-
-  // Instance methods
-  // -------------------------------------------------------------------------
-
-  // java.security.SecureRandomSpi interface implementation ------------------
 
   public byte[] engineGenerateSeed(int numBytes)
   {
     if (numBytes < 1)
-      {
-        return new byte[0];
-      }
+      return new byte[0];
     byte[] result = new byte[numBytes];
     this.engineNextBytes(result);
     return result;
@@ -129,11 +97,8 @@ public class UMacRandomSpi extends SecureRandomSpi
 
   public void engineNextBytes(byte[] bytes)
   {
-    if (!adaptee.isInitialised())
-      {
-        this.engineSetSeed(new byte[0]);
-      }
-
+    if (! adaptee.isInitialised())
+      this.engineSetSeed(new byte[0]);
     while (true)
       {
         try
@@ -155,7 +120,6 @@ public class UMacRandomSpi extends SecureRandomSpi
     materialLength += 16; // key material size
     materialLength++; // index size
     byte[] material = new byte[materialLength];
-
     // use as much as possible bytes from the seed
     int materialOffset = 0;
     int materialLeft = material.length;
@@ -166,8 +130,8 @@ public class UMacRandomSpi extends SecureRandomSpi
         materialOffset += lenToCopy;
         materialLeft -= lenToCopy;
       }
-    if (materialOffset > 0)
-      { // generate the rest
+    if (materialOffset > 0) // generate the rest
+      {
         while (true)
           {
             try
@@ -175,24 +139,22 @@ public class UMacRandomSpi extends SecureRandomSpi
                 prng.nextBytes(material, materialOffset, materialLeft);
                 break;
               }
-            catch (IllegalStateException x)
-              { // should not happen
+            catch (IllegalStateException x) // should not happen
+              {
                 throw new InternalError(MSG + String.valueOf(x));
               }
             catch (LimitReachedException x)
               {
-                if (DEBUG)
+                if (Configuration.DEBUG)
                   {
-                    debug(MSG + String.valueOf(x));
-                    debug(RETRY);
+                    log.fine(MSG + String.valueOf(x));
+                    log.fine(RETRY);
                   }
               }
           }
       }
-
     // setup the underlying adaptee instance
     HashMap attributes = new HashMap();
-
     // use AES cipher with 128-bit block size
     attributes.put(UMacGenerator.CIPHER, Registry.AES_CIPHER);
     // specify the key
@@ -200,8 +162,7 @@ public class UMacRandomSpi extends SecureRandomSpi
     System.arraycopy(material, 0, key, 0, 16);
     attributes.put(IBlockCipher.KEY_MATERIAL, key);
     // use a 1-byte index
-    attributes.put(UMacGenerator.INDEX, new Integer(material[16] & 0xFF));
-
+    attributes.put(UMacGenerator.INDEX, Integer.valueOf(material[16] & 0xFF));
     adaptee.init(attributes);
   }
 }
