@@ -38,9 +38,11 @@ exception statement from your version.  */
 
 package gnu.javax.crypto.keyring;
 
+import gnu.java.security.Configuration;
 import gnu.java.security.Registry;
 import gnu.java.security.prng.IRandom;
 import gnu.java.security.prng.LimitReachedException;
+import gnu.java.security.util.PRNG;
 import gnu.java.security.util.Util;
 import gnu.javax.crypto.mac.IMac;
 import gnu.javax.crypto.mac.MacFactory;
@@ -55,35 +57,27 @@ import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
 import java.security.InvalidKeyException;
-import java.security.SecureRandom;
 import java.util.Arrays;
-import java.util.Iterator;
 import java.util.HashMap;
+import java.util.Iterator;
+import java.util.logging.Logger;
 
 /**
- * <p>An entry authenticated with a password-based MAC.</p>
+ * An entry authenticated with a password-based MAC.
  */
-public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
+public final class PasswordAuthenticatedEntry
+    extends MaskableEnvelopeEntry
     implements PasswordProtectedEntry, Registry
 {
-
-  // Constants and variables
-  // -------------------------------------------------------------------------
-
+  private static final Logger log = Logger.getLogger(PasswordAuthenticatedEntry.class.getName());
   public static final int TYPE = 3;
-
-  // Constructor(s)
-  // -------------------------------------------------------------------------
 
   public PasswordAuthenticatedEntry(String mac, int maclen,
                                     Properties properties)
   {
     super(TYPE, properties);
-
     if (mac == null || mac.length() == 0)
-      {
-        throw new IllegalArgumentException("no MAC specified");
-      }
+      throw new IllegalArgumentException("no MAC specified");
     this.properties.put("mac", mac);
     this.properties.put("maclen", String.valueOf(maclen));
     setMasked(false);
@@ -94,9 +88,6 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
     super(TYPE);
     setMasked(true);
   }
-
-  // Class methods
-  // -------------------------------------------------------------------------
 
   public static PasswordAuthenticatedEntry decode(DataInputStream in,
                                                   char[] password)
@@ -113,10 +104,8 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
     entry.decodeEnvelope(in2);
     byte[] macValue = new byte[mac.macSize()];
     in.readFully(macValue);
-    if (!Arrays.equals(macValue, mac.digest()))
-      {
-        throw new MalformedKeyringException("MAC verification failed");
-      }
+    if (! Arrays.equals(macValue, mac.digest()))
+      throw new MalformedKeyringException("MAC verification failed");
     return entry;
   }
 
@@ -125,74 +114,76 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
   {
     PasswordAuthenticatedEntry entry = new PasswordAuthenticatedEntry();
     entry.defaultDecode(in);
-    if (!entry.properties.containsKey("mac"))
-      {
-        throw new MalformedKeyringException("no MAC");
-      }
-    if (!entry.properties.containsKey("maclen"))
-      {
-        throw new MalformedKeyringException("no MAC length");
-      }
-    if (!entry.properties.containsKey("salt"))
-      {
-        throw new MalformedKeyringException("no salt");
-      }
+    if (! entry.properties.containsKey("mac"))
+      throw new MalformedKeyringException("no MAC");
+    if (! entry.properties.containsKey("maclen"))
+      throw new MalformedKeyringException("no MAC length");
+    if (! entry.properties.containsKey("salt"))
+      throw new MalformedKeyringException("no salt");
     return entry;
   }
 
-  // Instance methods
-  // -------------------------------------------------------------------------
-
   public void verify(char[] password)
   {
-    if (!isMasked() || payload == null)
+    if (Configuration.DEBUG)
+      log.entering(this.getClass().getName(), "verify");
+    if (isMasked() && payload != null)
       {
-        return;
+        if (Configuration.DEBUG)
+          log.fine("payload to verify: " + Util.dumpString(payload));
+        long tt = -System.currentTimeMillis();
+        IMac m = null;
+        try
+          {
+            m = getMac(password);
+          }
+        catch (Exception x)
+          {
+            throw new IllegalArgumentException(x.toString(), x);
+          }
+        int limit = payload.length - m.macSize();
+        m.update(payload, 0, limit);
+        byte[] macValue = new byte[m.macSize()];
+        System.arraycopy(payload, payload.length - macValue.length, macValue,
+                         0, macValue.length);
+        if (! Arrays.equals(macValue, m.digest()))
+          throw new IllegalArgumentException("MAC verification failed");
+        setMasked(false);
+        ByteArrayInputStream bais;
+        try
+          {
+            bais = new ByteArrayInputStream(payload, 0, limit);
+            DataInputStream in = new DataInputStream(bais);
+            decodeEnvelope(in);
+          }
+        catch (IOException ioe)
+          {
+            throw new IllegalArgumentException("malformed keyring fragment");
+          }
+        tt += System.currentTimeMillis();
+        if (Configuration.DEBUG)
+          log.fine("Verified in " + tt + "ms.");
       }
-    IMac m = null;
-    try
-      {
-        m = getMac(password);
-      }
-    catch (Exception x)
-      {
-        throw new IllegalArgumentException(x.toString());
-      }
-
-    m.update(payload, 0, payload.length - m.macSize());
-    byte[] macValue = new byte[m.macSize()];
-    System.arraycopy(payload, payload.length - macValue.length, macValue, 0,
-                     macValue.length);
-    if (!Arrays.equals(macValue, m.digest()))
-      {
-        throw new IllegalArgumentException("MAC verification failed");
-      }
-    try
-      {
-        DataInputStream in = new DataInputStream(
-                                                 new ByteArrayInputStream(
-                                                                          payload,
-                                                                          0,
-                                                                          payload.length
-                                                                              - m.macSize()));
-        decodeEnvelope(in);
-      }
-    catch (IOException ioe)
-      {
-        throw new IllegalArgumentException("malformed keyring fragment");
-      }
-    setMasked(false);
-    payload = null;
+    else if (Configuration.DEBUG)
+      log.fine("Skip verification; "
+               + (isMasked() ? "null payload" : "unmasked"));
+    if (Configuration.DEBUG)
+      log.exiting(this.getClass().getName(), "verify");
   }
 
   public void authenticate(char[] password) throws IOException
   {
+    if (Configuration.DEBUG)
+      log.entering(this.getClass().getName(), "authenticate");
+    long tt = -System.currentTimeMillis();
+    long t1 = -System.currentTimeMillis();
     if (isMasked())
-      {
-        throw new IllegalStateException("entry is masked");
-      }
+      throw new IllegalStateException("entry is masked");
     byte[] salt = new byte[8];
-    new SecureRandom ().nextBytes (salt);
+    PRNG.getInstance().nextBytes(salt);
+    t1 += System.currentTimeMillis();
+    if (Configuration.DEBUG)
+      log.fine("-- Generated salt in " + t1 + "ms.");
     properties.put("salt", Util.toString(salt));
     IMac m = getMac(password);
     ByteArrayOutputStream bout = new ByteArrayOutputStream(1024);
@@ -201,10 +192,25 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
     for (Iterator it = entries.iterator(); it.hasNext();)
       {
         Entry entry = (Entry) it.next();
+        if (Configuration.DEBUG)
+          log.fine("-- About to authenticate one " + entry);
+        t1 = -System.currentTimeMillis();
         entry.encode(out2);
+        t1 += System.currentTimeMillis();
+        if (Configuration.DEBUG)
+          log.fine("-- Authenticated an Entry in " + t1 + "ms.");
       }
     bout.write(m.digest());
     payload = bout.toByteArray();
+    if (Configuration.DEBUG)
+      log.fine("authenticated payload: " + Util.dumpString(payload));
+    setMasked(true);
+    tt += System.currentTimeMillis();
+    if (Configuration.DEBUG)
+      {
+        log.fine("Authenticated in " + tt + "ms.");
+        log.exiting(this.getClass().getName(), "authenticate");
+      }
   }
 
   public void encode(DataOutputStream out, char[] password) throws IOException
@@ -217,48 +223,42 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
   {
     if (payload == null)
       {
+        log.fine("Null payload: " + this);
         throw new IllegalStateException("mac not computed");
       }
   }
 
-  // Own methods.
-  // ------------------------------------------------------------------------
-
   private IMac getMac(char[] password) throws MalformedKeyringException
   {
-    if (!properties.containsKey("salt"))
-      {
-        throw new MalformedKeyringException("no salt");
-      }
-    byte[] salt = Util.toBytesFromString(properties.get("salt"));
-    IMac mac = MacFactory.getInstance(properties.get("mac"));
+    if (Configuration.DEBUG)
+      log.entering(this.getClass().getName(), "getMac");
+    String saltString = properties.get("salt");
+    if (saltString == null)
+      throw new MalformedKeyringException("no salt");
+    byte[] salt = Util.toBytesFromString(saltString);
+    String macAlgorithm = properties.get("mac");
+    IMac mac = MacFactory.getInstance(macAlgorithm);
     if (mac == null)
-      {
-        throw new MalformedKeyringException("no such mac: "
-                                            + properties.get("mac"));
-      }
-    int keylen = mac.macSize();
-    int maclen = 0;
-    if (!properties.containsKey("maclen"))
-      {
-        throw new MalformedKeyringException("no MAC length");
-      }
+      throw new MalformedKeyringException("no such mac: " + macAlgorithm);
+    String macLenString = properties.get("maclen");
+    if (macLenString == null)
+      throw new MalformedKeyringException("no MAC length");
+    int maclen;
     try
       {
-        maclen = Integer.parseInt(properties.get("maclen"));
+        maclen = Integer.parseInt(macLenString);
       }
     catch (NumberFormatException nfe)
       {
         throw new MalformedKeyringException("bad MAC length");
       }
-
     HashMap pbAttr = new HashMap();
     pbAttr.put(IPBE.PASSWORD, password);
     pbAttr.put(IPBE.SALT, salt);
     pbAttr.put(IPBE.ITERATION_COUNT, ITERATION_COUNT);
     IRandom kdf = PRNGFactory.getInstance("PBKDF2-HMAC-SHA");
     kdf.init(pbAttr);
-
+    int keylen = mac.macSize();
     byte[] dk = new byte[keylen];
     try
       {
@@ -268,10 +268,9 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
       {
         throw new Error(shouldNotHappen.toString());
       }
-
     HashMap macAttr = new HashMap();
     macAttr.put(IMac.MAC_KEY_MATERIAL, dk);
-    macAttr.put(IMac.TRUNCATED_SIZE, new Integer(maclen));
+    macAttr.put(IMac.TRUNCATED_SIZE, Integer.valueOf(maclen));
     try
       {
         mac.init(macAttr);
@@ -280,6 +279,8 @@ public final class PasswordAuthenticatedEntry extends MaskableEnvelopeEntry
       {
         throw new Error(shouldNotHappen.toString());
       }
+    if (Configuration.DEBUG)
+      log.exiting(this.getClass().getName(), "getMac");
     return mac;
   }
 }
